# pi-mqtt-couchdb-signage-rs

./: .env.example  .eslintrc.js  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile-dev  Dockerfile-prod  ENVIRONMENT-CONFIG-PLAN.md  LAYERING-ROADMAP.md  README.md  VERSION-GUIDE.md  build.sh  docker-compose.yml  docker-compose.yml-prod  package-lock.json  package.json  send-config-update.js  test-mqtt-debug.js  test-mqtt.js
pi-slideshow-rs/: CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  signage.service
pi-slideshow-rs/src/: couchdb_client.rs  http_server.rs  main.rs  mqtt_client.rs  slideshow_controller.rs
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: db-setup.js  update-version.sh
src/: couchdb_client.rs  main.rs  mqtt_client.rs  server.js  slideshow_controller.rs  version.json
src/config/: database.js
src/middleware/: upload.js
src/models/: image.js  tv.js
src/routes/: dashboardRoutes.js  imageRoutes.js  tvRoutes.js
src/services/: mqttService.js
tests/: README.md
tests/integration/slideshow/: test-image-reload.sh
