[package]
name = "pi-slideshow-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
fastrand = "2.0"
libc = "0.2"
image = "0.24"
signal-hook = "0.3"
notify = "6.0"
memmap2 = "0.9"
num_cpus = "1.16"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
rumqttc = { version = "0.24", features = ["use-rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
chrono = "0.4"
warp = "0.3"
couch_rs = { version = "0.10", default-features = false }
url = "2.0"

[[bin]]
name = "pi-slideshow-rs"
path = "src/main.rs"
